--- a/docs/notebooks/1_demo_dataset.ipynb
+++ b/docs/notebooks/1_demo_dataset.ipynb
@@ -21,7 +21,7 @@
     "%load_ext autoreload\n",
     "\n",
     "%autoreload 2\n",
-    "from lours.dataset import Dataset, from_coco, from_caipy\n",
+    "from lours.dataset import Dataset, from_coco\n",
     "from lours.utils.testing import assert_dataset_equal"
    ]
   },
@@ -2213,8 +2213,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "empty.add_detection_annotation(\n",
     "    format_string=\"cxcywh\",\n",
     "    image_id=352582,\n",
