--- a/docs/notebooks/2_demo_split.ipynb
+++ b/docs/notebooks/2_demo_split.ipynb
@@ -22,15 +22,13 @@
     "%load_ext autoreload\n",
     "\n",
     "%autoreload 2\n",
-    "from lours.dataset import from_coco\n",
-    "from lours.dataset.split.balanced_groups import df_to_hist\n",
-    "from lours.utils import grouper\n",
-    "\n",
-    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn\n",
-    "import matplotlib.pyplot as plt\n",
-    "from ot import emd2, sinkhorn2, dist\n",
+    "from ot import dist, emd2, sinkhorn2\n",
+    "\n",
+    "from lours.dataset import from_coco\n",
+    "from lours.utils import grouper\n",
     "\n",
     "pd.set_option(\"max_colwidth\", 20)"
    ]
