--- a/docs/notebooks/3_demo_evaluation_detection.ipynb
+++ b/docs/notebooks/3_demo_evaluation_detection.ipynb
@@ -27,16 +27,17 @@
     "%autoreload 2\n",
     "import warnings\n",
     "\n",
-    "warnings.simplefilter(action=\"ignore\", category=FutureWarning)\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from lours.evaluation.detection import DetectionEvaluator as de\n",
-    "from lours.utils.grouper import ContinuousGroup\n",
-    "from lours.dataset import from_coco\n",
-    "from lours.evaluation.detection.util import display_confusion_matrix\n",
-    "from pathlib import Path\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "\n",
+    "from lours.dataset import from_coco\n",
+    "from lours.evaluation.detection import DetectionEvaluator as de\n",
+    "from lours.evaluation.detection.util import display_confusion_matrix\n",
+    "from lours.utils.grouper import ContinuousGroup\n",
+    "\n",
+    "warnings.simplefilter(action=\"ignore\", category=FutureWarning)"
    ]
   },
   {
