--- a/docs/notebooks/4_demo_evaluation_crowd.ipynb
+++ b/docs/notebooks/4_demo_evaluation_crowd.ipynb
@@ -22,12 +22,14 @@
     "%autoreload 2\n",
     "import warnings\n",
     "\n",
-    "warnings.simplefilter(action=\"ignore\", category=FutureWarning)\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from lours.evaluation.detection import CrowdDetectionEvaluator as cde\n",
-    "from lours.dataset import from_coco_keypoints\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "\n",
+    "from lours.dataset import from_coco_keypoints\n",
+    "from lours.evaluation.detection import CrowdDetectionEvaluator as cde\n",
+    "\n",
+    "warnings.simplefilter(action=\"ignore\", category=FutureWarning)"
    ]
   },
   {
