--- a/docs/notebooks/5_demo_fiftyone.ipynb
+++ b/docs/notebooks/5_demo_fiftyone.ipynb
@@ -20,8 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lours.dataset import from_coco, from_coco_keypoints, Dataset\n",
-    "import fiftyone as fo"
+    "import fiftyone as fo\n",
+    "\n",
+    "from lours.dataset import Dataset, from_coco, from_coco_keypoints"
    ]
   },
   {
