--- a/docs/notebooks/7_demo_booleanize.ipynb
+++ b/docs/notebooks/7_demo_booleanize.ipynb
@@ -24,10 +24,11 @@
     "%autoreload 2\n",
     "import warnings\n",
     "\n",
-    "warnings.simplefilter(action=\"ignore\", category=FutureWarning)\n",
     "import lours\n",
     "from lours.dataset import from_caipy\n",
-    "from lours.utils.testing import assert_dataset_equal"
+    "from lours.utils.testing import assert_dataset_equal\n",
+    "\n",
+    "warnings.simplefilter(action=\"ignore\", category=FutureWarning)"
    ]
   },
   {
