Make code compatible with last version of json-schema-rs

--- a/docs/notebooks/6_demo_schemas.ipynb
+++ b/docs/notebooks/6_demo_schemas.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "22741882-a848-411f-8329-1b3163917dd9",
    "metadata": {
     "tags": [
@@ -217,9 +217,9 @@
     }
    ],
    "source": [
-    "from jsonschema_rs import JSONSchema\n",
+    "from jsonschema_rs import validator_for\n",
     "\n",
-    "validator = JSONSchema(default_caipy_schema)\n",
+    "validator = validator_for(default_caipy_schema)\n",
     "\n",
     "validator.validate(custom_dict)"
    ]
